# GBW2_patch_framework

./: .gitignore  README.md  TODO  pyproject.toml
gbc_patcher/: __init__.py  __main__.py  emulator.py  gui.py
tools/: compare_bytes.py  potential-turn-flags.txt
