[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gbc-patcher"
version = "1.0.0"
description = "GameBoy Color runtime patcher — apply byte patches via PC hooks"
requires-python = ">=3.10"
dependencies = [
    "pyboy>=2.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
gbc_patcher = "gbc_patcher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gbc_patcher*"]

